# cdk-aws-lambda-otel-code-instrumentation

./: .projenrc.ts  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.projen/: deps.json  tasks.json
src/functions/client-node/: index.ts
src/functions/client-node/broken/: index.middy.ts
src/functions/client-node/ex/: index.v2.ts  index.v3.ts  index.v4.ts  index.v5.ts  index.v7.ts
src/functions/client-rust/: Cargo.toml
src/functions/client-rust/src/: main.rs
src/functions/client/node/: index.ts
src/functions/client/node/ex/: index.v6.ts
src/functions/client/rust/: Cargo.toml
src/functions/client/rust/src/: main.rs
src/functions/forwarder/: Cargo.toml
src/functions/forwarder/src/: headers.rs  main.rs
src/functions/service/: Cargo.toml
src/functions/service/src/frontend/: main.rs
src/stacks/: my-stack.ts
