[workspace]
members = [
    "src/functions/client-rust",
    "src/functions/forwarder",
    "src/functions/service"
]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
# Local packages
# custom-stdout-exporter = { path = "src/packages/custom-stdout-exporter" }

# Runtime and async
async-trait = "0.1.88"
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }

# OpenTelemetry Unofficial
lambda-otel-lite = "0.11.4"
lambda-lw-http-router = "0.3.0"
otlp-sigv4-client = "0.10.0"
otlp-stdout-client = "0.4.1"
otlp-stdout-span-exporter = "0.11.1"

# OpenTelemetry Official
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry-aws = { version = "0.16.0", features = ["detector-aws-lambda"] }
opentelemetry-http = { version = "0.28.0" }
opentelemetry-otlp = { version = "0.28.0", features = ["http-proto", "http-json", "reqwest-client"] }
opentelemetry-proto = { version = "0.28.0", features = ["gen-tonic", "trace"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
tracing = { version = "0.1", features = ["log"] }
tracing-opentelemetry = "0.29.0"

# AWS related
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.2"
aws-sdk-kinesis = { version = "1", default-features = false, features = ["rt-tokio"] }
aws-sdk-secretsmanager = { version = "1.66.0", features = ["behavior-version-latest"] }
aws-smithy-runtime-api = { version = "1.7.4", features = ["http-1x"] }
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["apigw", "alb", "sqs"] }
lambda-extension = { version = "0.11.0" }
lambda_runtime = { version = "0.13.0", features = ["anyhow", "tracing", "opentelemetry"] }

# HTTP and networking
http = "1.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }

# Serialization and utils
anyhow = "1.0.97"
chrono = "0.4.40"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.16", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
