[package]
name = "client-rust"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# AWS Labs
aws_lambda_events.workspace = true
lambda_runtime.workspace = true

# Lambda Utils
lambda-otel-lite.workspace = true
lambda-lw-http-router.workspace = true

# OpenTelemetry
opentelemetry.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true

# Others
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true
